--- a/st.html
+++ b/st.html
@@ -18,7 +18,7 @@
         <label for="email">Email:</label>
         <input type="text" id="email" name="email"  required><br><br>
 
-    
+     this is new file
         <button type="submit">Register</button>
     </form>
 </body>
